# vectorization

./: CMakeLists.txt  build.sh  run_teach_cluster.sh  vec_add_driver.cpp
include/: vec_add.h
src/: vec_add.cpp
